data/derived/sp14/progs/unify/prog4612.ml.out
Characters 82-86:
  | Sine e-> 0.34*e;;
             ^^^^
Error: This expression has type float but an expression was expected of type
         int
